--- a/angular.json
+++ b/angular.json
@@ -87,6 +87,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap-css-only/css/bootstrap.css",
+              "node_modules/bootstrap-css-only/css/bootstrap-theme.css",
               "src/styles.css"
             ],
             "scripts": []
